--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 
 .idea/.idea.EBono-API/.idea/vcs.xml
+EBono-API/obj/rider.project.restore.info
+EBono-API/obj/Debug/net5.0/EBono-API.pdb
+EBono-API/obj/Debug/net5.0/EBono-API.dll
+EBono-API/obj/Debug/net5.0/EBono-API.csprojAssemblyReference.cache
+EBono-API/bin/Debug/net5.0/EBono-API.pdb
+EBono-API/bin/Debug/net5.0/EBono-API.dll
