--- a/EBono-API/appsettings.json
+++ b/EBono-API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "EbonosDB": "Server=tcp:ebonos-server.database.windows.net,1433;Initial Catalog=ebonos-database;Persist Security Info=False;User ID=ebonos_admin;Password=upc-finanzas-2022$;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30 "
+    "EbonosDB": "paste azure db here"
   },
   "Logging": {
     "LogLevel": {
