added new db connection
added new db connection

--- a/EBono-API/appsettings.json
+++ b/EBono-API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "EbonosDB": "paste azure db here"
+    "EbonosDB": "Server=b4cuxgskbklltiddqdiu-mysql.services.clever-cloud.com;Database=b4cuxgskbklltiddqdiu;Uid=umsedjzc3pbctvyv;Pwd=C3pEIy2HdwRUAGppKiLN"
   },
   "Logging": {
     "LogLevel": {
